@@ -38,6 +38,7 @@
   + New DrawPie/BeginDrawPie/EndDrawPie/DrawPieAsync methods
   + New FillPie/BeginFillPie/EndFillPie/FillPieAsync methods
   + New DrawRoundedRectangle/BeginDrawRoundedRectangle/EndDrawRoundedRectangle/DrawRoundedRectangleAsync methods
+  + New FillRoundedRectangle/BeginFillRoundedRectangle/EndFillRoundedRectangle/FillRoundedRectangleAsync methods
   + New FillPath/BeginFillPath/EndFillPath/FillPathAsync methods
 
 + New KGySoft.Drawing.Shapes namespace
